--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,34 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+.active-drop {
+    display: flex;
+    text-align: left;
+}
+
+.inactive-drop {
+    display: none;
+}
+
+.active-burder {
+    display: flex;
+    text-align: left;
+}
+
+.inactive-burger {
+    display: none;
+}
+
+.active-nav {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+
+.footer {
+    text-align: left;
+}
+
+.dfsd {
+    color: #e9d7cc;
+}
