--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,46 @@
+@import 'tailwindcss';
+
+@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
+@source '../../storage/framework/views/*.php';
+@source '..//*.blade.php';
+@source '..//*.js';
+
+@theme {
+    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+.active-drop {
+    display: flex;
+    text-align: left;
+}
+
+.inactive-drop {
+    display: none;
+}
+
+.active-burder {
+    display: flex;
+    text-align: left;
+}
+
+.inactive-burger {
+    display: none;
+}
+
+.active-nav {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+
+.footer {
+    text-align: left;
+}
+
+.dfsd {
+    color: #e9d7cc;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 30px;
